python/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    BOGUS
    QUESTION
    NABHAE

Grammar

Rule 0     S' -> begin
Rule 1     begin -> program
Rule 2     program -> program NEWLINE stmt
Rule 3     program -> stmt
Rule 4     stmt -> empty
Rule 5     stmt -> slstmt
Rule 6     stmt -> mlstmt
Rule 7     slstmt -> expression
Rule 8     slstmt -> assignment
Rule 9     slstmt -> print
Rule 10    slstmt -> input
Rule 11    slstmt -> slif
Rule 12    slstmt -> incremental
Rule 13    slstmt -> return
Rule 14    slstmt -> continue
Rule 15    slstmt -> break
Rule 16    slstmt -> filewriteln
Rule 17    slstmt -> filewrite
Rule 18    slstmt -> fileread
Rule 19    slstmt -> fileclose
Rule 20    slstmt -> graphicshow
Rule 21    slstmt -> graphichide
Rule 22    slstmt -> graphicclose
Rule 23    slstmt -> graphicupdate
Rule 24    slstmt -> graphicclear
Rule 25    slstmt -> graphicdraw
Rule 26    expression -> expr
Rule 27    assignment -> reference ASSIGNMENT expr
Rule 28    print -> variableExpr LEKHA SEMICOLON
Rule 29    print -> variableExpr LEKHA
Rule 30    input -> variableExpr LEU
Rule 31    incremental -> reference AI expr
Rule 32    incremental -> reference SI expr
Rule 33    incremental -> reference MI expr
Rule 34    incremental -> reference DI expr
Rule 35    return -> expr PATHAU
Rule 36    continue -> ARKO
Rule 37    break -> BAHIRA
Rule 38    slif -> YEDI expr BHAE slstmt ATHAWA slstmt
Rule 39    slif -> YEDI expr BHAE slstmt
Rule 40    mlstmt -> mlif
Rule 41    mlstmt -> forloop
Rule 42    mlstmt -> whileloop
Rule 43    mlstmt -> repeatloop
Rule 44    mlstmt -> function
Rule 45    mlstmt -> class
Rule 46    mlif -> YEDI expr BHAE NEWLINE program DIYE
Rule 47    mlif -> YEDI expr BHAE NEWLINE program optelse DIYE
Rule 48    optelse -> ATHAWA expr BHAE NEWLINE program optelse
Rule 49    optelse -> ATHAWA expr BHAE NEWLINE program
Rule 50    optelse -> ATHAWA NEWLINE program
Rule 51    forloop -> SABAI reference ASSIGNMENT expr DEKHI expr NEWLINE program BAISA
Rule 52    forloop -> SABAI reference ASSIGNMENT expr DEKHI expr COLON expr NEWLINE program BAISA
Rule 53    whileloop -> JABA SAMMA expr NEWLINE program BAJA
Rule 54    repeatloop -> expr CHOTI NEWLINE program TICHO
Rule 55    function -> KAAM IDENTIFIER LPARA variableArgs RPARA NEWLINE program MAKA
Rule 56    class -> KHAKA IDENTIFIER NEWLINE program KAKHA
Rule 57    filewriteln -> reference MA variableExpr LEKHA
Rule 58    filewrite -> reference MA variableExpr LEKHA SEMICOLON
Rule 59    fileread -> reference BATA reference LEU
Rule 60    fileclose -> reference BANDAGARA
Rule 61    graphicshow -> reference DEKHAU
Rule 62    graphichide -> reference LUKAU
Rule 63    graphicclose -> reference HATAU
Rule 64    graphicupdate -> reference BANAU
Rule 65    graphicclear -> reference METAU
Rule 66    graphicdraw -> reference MA string KORA variableExpr
Rule 67    variableExpr -> variableExpr COMMA expr
Rule 68    variableExpr -> expr
Rule 69    variableExpr -> empty
Rule 70    variableArgs -> IDENTIFIER COMMA variableArgs
Rule 71    variableArgs -> IDENTIFIER
Rule 72    variableArgs -> empty
Rule 73    expr -> expr PLUS expr
Rule 74    expr -> expr MINUS expr
Rule 75    expr -> expr TIMES expr
Rule 76    expr -> expr DIVIDE expr
Rule 77    expr -> expr MODULUS expr
Rule 78    expr -> expr POWER expr
Rule 79    expr -> LPARA expr RPARA
Rule 80    expr -> integer
Rule 81    expr -> float
Rule 82    expr -> imaginary
Rule 83    expr -> string
Rule 84    expr -> null
Rule 85    expr -> boolean
Rule 86    expr -> reference
Rule 87    expr -> array
Rule 88    integer -> DECIMALINTEGER
Rule 89    integer -> OCTALINTEGER
Rule 90    integer -> HEXAINTEGER
Rule 91    float -> FLOAT
Rule 92    imaginary -> IMAGNUMBER
Rule 93    string -> STRING
Rule 94    null -> SUNYA
Rule 95    boolean -> SACHO
Rule 96    boolean -> JHUTO
Rule 97    array -> LGPARA variableExpr RGPARA
Rule 98    reference -> identifier
Rule 99    reference -> functioncall
Rule 100   reference -> reference DOT reference
Rule 101   reference -> reference KO reference
Rule 102   reference -> identifier optindex
Rule 103   optindex -> optindex LGPARA aryexpr RGPARA
Rule 104   optindex -> LGPARA aryexpr RGPARA
Rule 105   aryexpr -> expr
Rule 106   aryexpr -> expr COLON expr
Rule 107   identifier -> IDENTIFIER
Rule 108   functioncall -> IDENTIFIER LPARA variableExpr RPARA
Rule 109   expr -> MINUS expr
Rule 110   expr -> expr GT expr
Rule 111   expr -> expr LT expr
Rule 112   expr -> expr GE expr
Rule 113   expr -> expr LE expr
Rule 114   expr -> expr EQ expr
Rule 115   expr -> expr NE expr
Rule 116   expr -> expr RA expr
Rule 117   expr -> expr WA expr
Rule 118   expr -> expr CHHA
Rule 119   expr -> expr CHHAINA
Rule 120   empty -> <empty>
Rule 121   slif -> YEDI expr error slstmt
Rule 122   slif -> YEDI expr error ATHAWA slstmt
Rule 123   mlif -> YEDI expr error NEWLINE program DIYE
Rule 124   mlif -> YEDI expr error NEWLINE program optelse DIYE
Rule 125   optelse -> ATHAWA expr error NEWLINE program optelse
Rule 126   optelse -> ATHAWA expr error NEWLINE program
Rule 127   mlif -> YEDI expr BHAE NEWLINE program error
Rule 128   mlif -> YEDI expr BHAE NEWLINE program optelse error
Rule 129   function -> KAAM IDENTIFIER LPARA error RPARA NEWLINE program MAKA

Terminals, with rules where they appear

AI                   : 31
ARKO                 : 36
ASSIGNMENT           : 27 51 52
ATHAWA               : 38 48 49 50 122 125 126
BAHIRA               : 37
BAISA                : 51 52
BAJA                 : 53
BANAU                : 64
BANDAGARA            : 60
BATA                 : 59
BHAE                 : 38 39 46 47 48 49 127 128
BOGUS                : 
CHHA                 : 118
CHHAINA              : 119
CHOTI                : 54
COLON                : 52 106
COMMA                : 67 70
DECIMALINTEGER       : 88
DEKHAU               : 61
DEKHI                : 51 52
DI                   : 34
DIVIDE               : 76
DIYE                 : 46 47 123 124
DOT                  : 100
EQ                   : 114
FLOAT                : 91
GE                   : 112
GT                   : 110
HATAU                : 63
HEXAINTEGER          : 90
IDENTIFIER           : 55 56 70 71 107 108 129
IMAGNUMBER           : 92
JABA                 : 53
JHUTO                : 96
KAAM                 : 55 129
KAKHA                : 56
KHAKA                : 56
KO                   : 101
KORA                 : 66
LE                   : 113
LEKHA                : 28 29 57 58
LEU                  : 30 59
LGPARA               : 97 103 104
LPARA                : 55 79 108 129
LT                   : 111
LUKAU                : 62
MA                   : 57 58 66
MAKA                 : 55 129
METAU                : 65
MI                   : 33
MINUS                : 74 109
MODULUS              : 77
NABHAE               : 
NE                   : 115
NEWLINE              : 2 46 47 48 49 50 51 52 53 54 55 56 123 124 125 126 127 128 129
OCTALINTEGER         : 89
PATHAU               : 35
PLUS                 : 73
POWER                : 78
QUESTION             : 
RA                   : 116
RGPARA               : 97 103 104
RPARA                : 55 79 108 129
SABAI                : 51 52
SACHO                : 95
SAMMA                : 53
SEMICOLON            : 28 58
SI                   : 32
STRING               : 93
SUNYA                : 94
TICHO                : 54
TIMES                : 75
WA                   : 117
YEDI                 : 38 39 46 47 121 122 123 124 127 128
error                : 121 122 123 124 125 126 127 128 129

Nonterminals, with rules where they appear

array                : 87
aryexpr              : 103 104
assignment           : 8
begin                : 0
boolean              : 85
break                : 15
class                : 45
continue             : 14
empty                : 4 69 72
expr                 : 26 27 31 32 33 34 35 38 39 46 47 48 49 51 51 52 52 52 53 54 67 68 73 73 74 74 75 75 76 76 77 77 78 78 79 105 106 106 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 119 121 122 123 124 125 126 127 128
expression           : 7
fileclose            : 19
fileread             : 18
filewrite            : 17
filewriteln          : 16
float                : 81
forloop              : 41
function             : 44
functioncall         : 99
graphicclear         : 24
graphicclose         : 22
graphicdraw          : 25
graphichide          : 21
graphicshow          : 20
graphicupdate        : 23
identifier           : 98 102
imaginary            : 82
incremental          : 12
input                : 10
integer              : 80
mlif                 : 40
mlstmt               : 6
null                 : 84
optelse              : 47 48 124 125 128
optindex             : 102 103
print                : 9
program              : 1 2 46 47 48 49 50 51 52 53 54 55 56 123 124 125 126 127 128 129
reference            : 27 31 32 33 34 51 52 57 58 59 59 60 61 62 63 64 65 66 86 100 100 101 101
repeatloop           : 43
return               : 13
slif                 : 11
slstmt               : 5 38 38 39 121 122
stmt                 : 2 3
string               : 66 83
variableArgs         : 55 70
variableExpr         : 28 29 30 57 58 66 67 97 108
whileloop            : 42

Parsing method: LALR

state 0

    (0) S' -> . begin
    (1) begin -> . program
    (2) program -> . program NEWLINE stmt
    (3) program -> . stmt
    (4) stmt -> . empty
    (5) stmt -> . slstmt
    (6) stmt -> . mlstmt
    (120) empty -> .
    (7) slstmt -> . expression
    (8) slstmt -> . assignment
    (9) slstmt -> . print
    (10) slstmt -> . input
    (11) slstmt -> . slif
    (12) slstmt -> . incremental
    (13) slstmt -> . return
    (14) slstmt -> . continue
    (15) slstmt -> . break
    (16) slstmt -> . filewriteln
    (17) slstmt -> . filewrite
    (18) slstmt -> . fileread
    (19) slstmt -> . fileclose
    (20) slstmt -> . graphicshow
    (21) slstmt -> . graphichide
    (22) slstmt -> . graphicclose
    (23) slstmt -> . graphicupdate
    (24) slstmt -> . graphicclear
    (25) slstmt -> . graphicdraw
    (40) mlstmt -> . mlif
    (41) mlstmt -> . forloop
    (42) mlstmt -> . whileloop
    (43) mlstmt -> . repeatloop
    (44) mlstmt -> . function
    (45) mlstmt -> . class
    (26) expression -> . expr
    (27) assignment -> . reference ASSIGNMENT expr
    (28) print -> . variableExpr LEKHA SEMICOLON
    (29) print -> . variableExpr LEKHA
    (30) input -> . variableExpr LEU
    (38) slif -> . YEDI expr BHAE slstmt ATHAWA slstmt
    (39) slif -> . YEDI expr BHAE slstmt
    (121) slif -> . YEDI expr error slstmt
    (122) slif -> . YEDI expr error ATHAWA slstmt
    (31) incremental -> . reference AI expr
    (32) incremental -> . reference SI expr
    (33) incremental -> . reference MI expr
    (34) incremental -> . reference DI expr
    (35) return -> . expr PATHAU
    (36) continue -> . ARKO
    (37) break -> . BAHIRA
    (57) filewriteln -> . reference MA variableExpr LEKHA
    (58) filewrite -> . reference MA variableExpr LEKHA SEMICOLON
    (59) fileread -> . reference BATA reference LEU
    (60) fileclose -> . reference BANDAGARA
    (61) graphicshow -> . reference DEKHAU
    (62) graphichide -> . reference LUKAU
    (63) graphicclose -> . reference HATAU
    (64) graphicupdate -> . reference BANAU
    (65) graphicclear -> . reference METAU
    (66) graphicdraw -> . reference MA string KORA variableExpr
    (46) mlif -> . YEDI expr BHAE NEWLINE program DIYE
    (47) mlif -> . YEDI expr BHAE NEWLINE program optelse DIYE
    (123) mlif -> . YEDI expr error NEWLINE program DIYE
    (124) mlif -> . YEDI expr error NEWLINE program optelse DIYE
    (127) mlif -> . YEDI expr BHAE NEWLINE program error
    (128) mlif -> . YEDI expr BHAE NEWLINE program optelse error
    (51) forloop -> . SABAI reference ASSIGNMENT expr DEKHI expr NEWLINE program BAISA
    (52) forloop -> . SABAI reference ASSIGNMENT expr DEKHI expr COLON expr NEWLINE program BAISA
    (53) whileloop -> . JABA SAMMA expr NEWLINE program BAJA
    (54) repeatloop -> . expr CHOTI NEWLINE program TICHO
    (55) function -> . KAAM IDENTIFIER LPARA variableArgs RPARA NEWLINE program MAKA
    (129) function -> . KAAM IDENTIFIER LPARA error RPARA NEWLINE program MAKA
    (56) class -> . KHAKA IDENTIFIER NEWLINE program KAKHA
    (73) expr -> . expr PLUS expr
    (74) expr -> . expr MINUS expr
    (75) expr -> . expr TIMES expr
    (76) expr -> . expr DIVIDE expr
    (77) expr -> . expr MODULUS expr
    (78) expr -> . expr POWER expr
    (79) expr -> . LPARA expr RPARA
    (80) expr -> . integer
    (81) expr -> . float
    (82) expr -> . imaginary
    (83) expr -> . string
    (84) expr -> . null
    (85) expr -> . boolean
    (86) expr -> . reference
    (87) expr -> . array
    (109) expr -> . MINUS expr
    (110) expr -> . expr GT expr
    (111) expr -> . expr LT expr
    (112) expr -> . expr GE expr
    (113) expr -> . expr LE expr
    (114) expr -> . expr EQ expr
    (115) expr -> . expr NE expr
    (116) expr -> . expr RA expr
    (117) expr -> . expr WA expr
    (118) expr -> . expr CHHA
    (119) expr -> . expr CHHAINA
    (98) reference -> . identifier
    (99) reference -> . functioncall
    (100) reference -> . reference DOT reference
    (101) reference -> . reference KO reference
    (102) reference -> . identifier optindex
    (67) variableExpr -> . variableExpr COMMA expr
    (68) variableExpr -> . expr
    (69) variableExpr -> . empty
    (88) integer -> . DECIMALINTEGER
    (89) integer -> . OCTALINTEGER
    (90) integer -> . HEXAINTEGER
    (91) float -> . FLOAT
    (92) imaginary -> . IMAGNUMBER
    (93) string -> . STRING
    (94) null -> . SUNYA
    (95) boolean -> . SACHO
    (96) boolean -> . JHUTO
    (97) array -> . LGPARA variableExpr RGPARA
    (107) identifier -> . IDENTIFIER
    (108) functioncall -> . IDENTIFIER LPARA variableExpr RPARA

    NEWLINE         reduce using rule 120 (empty -> .)
    $end            reduce using rule 120 (empty -> .)
    LEKHA           reduce using rule 120 (empty -> .)
    LEU             reduce using rule 120 (empty -> .)
    COMMA           reduce using rule 120 (empty -> .)
    YEDI            shift and go to state 18
    ARKO            shift and go to state 53
    BAHIRA          shift and go to state 2
    SABAI           shift and go to state 54
    JABA            shift and go to state 50
    KAAM            shift and go to state 38
    KHAKA           shift and go to state 39
    LPARA           shift and go to state 6
    MINUS           shift and go to state 1
    DECIMALINTEGER  shift and go to state 55
    OCTALINTEGER    shift and go to state 36
    HEXAINTEGER     shift and go to state 29
    FLOAT           shift and go to state 61
    IMAGNUMBER      shift and go to state 13
    STRING          shift and go to state 57
    SUNYA           shift and go to state 44
    SACHO           shift and go to state 33
    JHUTO           shift and go to state 31
    LGPARA          shift and go to state 16
    IDENTIFIER      shift and go to state 40

    slif                           shift and go to state 47
    reference                      shift and go to state 17
    boolean                        shift and go to state 34
    graphicupdate                  shift and go to state 28
    float                          shift and go to state 19
    graphicclose                   shift and go to state 49
    incremental                    shift and go to state 51
    array                          shift and go to state 35
    null                           shift and go to state 52
    imaginary                      shift and go to state 27
    string                         shift and go to state 8
    forloop                        shift and go to state 3
    filewrite                      shift and go to state 21
    program                        shift and go to state 4
    print                          shift and go to state 22
    input                          shift and go to state 5
    empty                          shift and go to state 41
    function                       shift and go to state 42
    whileloop                      shift and go to state 23
    begin                          shift and go to state 56
    return                         shift and go to state 7
    slstmt                         shift and go to state 43
    graphicclear                   shift and go to state 24
    assignment                     shift and go to state 58
    filewriteln                    shift and go to state 37
    stmt                           shift and go to state 25
    graphichide                    shift and go to state 26
    break                          shift and go to state 10
    mlstmt                         shift and go to state 20
    integer                        shift and go to state 11
    mlif                           shift and go to state 12
    class                          shift and go to state 59
    repeatloop                     shift and go to state 9
    graphicdraw                    shift and go to state 45
    fileread                       shift and go to state 60
    expr                           shift and go to state 46
    graphicshow                    shift and go to state 48
    variableExpr                   shift and go to state 30
    continue                       shift and go to state 14
    functioncall                   shift and go to state 62
    identifier                     shift and go to state 15
    expression                     shift and go to state 32
    fileclose                      shift and go to state 63

state 1

    (109) expr -> MINUS . expr
    (73) expr -> . expr PLUS expr
    (74) expr -> . expr MINUS expr
    (75) expr -> . expr TIMES expr
    (76) expr -> . expr DIVIDE expr
    (77) expr -> . expr MODULUS expr
    (78) expr -> . expr POWER expr
    (79) expr -> . LPARA expr RPARA
    (80) expr -> . integer
    (81) expr -> . float
    (82) expr -> . imaginary
    (83) expr -> . string
    (84) expr -> . null
    (85) expr -> . boolean
    (86) expr -> . reference
    (87) expr -> . array
    (109) expr -> . MINUS expr
    (110) expr -> . expr GT expr
    (111) expr -> . expr LT expr
    (112) expr -> . expr GE expr
    (113) expr -> . expr LE expr
    (114) expr -> . expr EQ expr
    (115) expr -> . expr NE expr
    (116) expr -> . expr RA expr
    (117) expr -> . expr WA expr
    (118) expr -> . expr CHHA
    (119) expr -> . expr CHHAINA
    (88) integer -> . DECIMALINTEGER
    (89) integer -> . OCTALINTEGER
    (90) integer -> . HEXAINTEGER
    (91) float -> . FLOAT
    (92) imaginary -> . IMAGNUMBER
    (93) string -> . STRING
    (94) null -> . SUNYA
    (95) boolean -> . SACHO
    (96) boolean -> . JHUTO
    (98) reference -> . identifier
    (99) reference -> . functioncall
    (100) reference -> . reference DOT reference
    (101) reference -> . reference KO reference
    (102) reference -> . identifier optindex
    (97) array -> . LGPARA variableExpr RGPARA
    (107) identifier -> . IDENTIFIER
    (108) functioncall -> . IDENTIFIER LPARA variableExpr RPARA

    LPARA           shift and go to state 6
    MINUS           shift and go to state 1
    DECIMALINTEGER  shift and go to state 55
    OCTALINTEGER    shift and go to state 36
    HEXAINTEGER     shift and go to state 29
    FLOAT           shift and go to state 61
    IMAGNUMBER      shift and go to state 13
    STRING          shift and go to state 57
    SUNYA           shift and go to state 44
    SACHO           shift and go to state 33
    JHUTO           shift and go to state 31
    LGPARA          shift and go to state 16
    IDENTIFIER      shift and go to state 40

    identifier                     shift and go to state 15
    string                         shift and go to state 8
    reference                      shift and go to state 64
    expr                           shift and go to state 65
    float                          shift and go to state 19
    boolean                        shift and go to state 34
    functioncall                   shift and go to state 62
    integer                        shift and go to state 11
    imaginary                      shift and go to state 27
    null                           shift and go to state 52
    array                          shift and go to state 35

state 2

    (37) break -> BAHIRA .

    NEWLINE         reduce using rule 37 (break -> BAHIRA .)
    $end            reduce using rule 37 (break -> BAHIRA .)
    KAKHA           reduce using rule 37 (break -> BAHIRA .)
    TICHO           reduce using rule 37 (break -> BAHIRA .)
    DIYE            reduce using rule 37 (break -> BAHIRA .)
    error           reduce using rule 37 (break -> BAHIRA .)
    ATHAWA          reduce using rule 37 (break -> BAHIRA .)
    BAJA            reduce using rule 37 (break -> BAHIRA .)
    MAKA            reduce using rule 37 (break -> BAHIRA .)
    BAISA           reduce using rule 37 (break -> BAHIRA .)


state 3

    (41) mlstmt -> forloop .

    DIYE            reduce using rule 41 (mlstmt -> forloop .)
    error           reduce using rule 41 (mlstmt -> forloop .)
    NEWLINE         reduce using rule 41 (mlstmt -> forloop .)
    ATHAWA          reduce using rule 41 (mlstmt -> forloop .)
    $end            reduce using rule 41 (mlstmt -> forloop .)
    MAKA            reduce using rule 41 (mlstmt -> forloop .)
    BAJA            reduce using rule 41 (mlstmt -> forloop .)
    BAISA           reduce using rule 41 (mlstmt -> forloop .)
    TICHO           reduce using rule 41 (mlstmt -> forloop .)
    KAKHA           reduce using rule 41 (mlstmt -> forloop .)


state 4

    (1) begin -> program .
    (2) program -> program . NEWLINE stmt

    $end            reduce using rule 1 (begin -> program .)
    NEWLINE         shift and go to state 66


state 5

    (10) slstmt -> input .

    NEWLINE         reduce using rule 10 (slstmt -> input .)
    $end            reduce using rule 10 (slstmt -> input .)
    KAKHA           reduce using rule 10 (slstmt -> input .)
    TICHO           reduce using rule 10 (slstmt -> input .)
    DIYE            reduce using rule 10 (slstmt -> input .)
    error           reduce using rule 10 (slstmt -> input .)
    ATHAWA          reduce using rule 10 (slstmt -> input .)
    BAJA            reduce using rule 10 (slstmt -> input .)
    MAKA            reduce using rule 10 (slstmt -> input .)
    BAISA           reduce using rule 10 (slstmt -> input .)


state 6

    (79) expr -> LPARA . expr RPARA
    (73) expr -> . expr PLUS expr
    (74) expr -> . expr MINUS expr
    (75) expr -> . expr TIMES expr
    (76) expr -> . expr DIVIDE expr
    (77) expr -> . expr MODULUS expr
    (78) expr -> . expr POWER expr
    (79) expr -> . LPARA expr RPARA
    (80) expr -> . integer
    (81) expr -> . float
    (82) expr -> . imaginary
    (83) expr -> . string
    (84) expr -> . null
    (85) expr -> . boolean
    (86) expr -> . reference
    (87) expr -> . array
    (109) expr -> . MINUS expr
    (110) expr -> . expr GT expr
    (111) expr -> . expr LT expr
    (112) expr -> . expr GE expr
    (113) expr -> . expr LE expr
    (114) expr -> . expr EQ expr
    (115) expr -> . expr NE expr
    (116) expr -> . expr RA expr
    (117) expr -> . expr WA expr
    (118) expr -> . expr CHHA
    (119) expr -> . expr CHHAINA
    (88) integer -> . DECIMALINTEGER
    (89) integer -> . OCTALINTEGER
    (90) integer -> . HEXAINTEGER
    (91) float -> . FLOAT
    (92) imaginary -> . IMAGNUMBER
    (93) string -> . STRING
    (94) null -> . SUNYA
    (95) boolean -> . SACHO
    (96) boolean -> . JHUTO
    (98) reference -> . identifier
    (99) reference -> . functioncall
    (100) reference -> . reference DOT reference
    (101) reference -> . reference KO reference
    (102) reference -> . identifier optindex
    (97) array -> . LGPARA variableExpr RGPARA
    (107) identifier -> . IDENTIFIER
    (108) functioncall -> . IDENTIFIER LPARA variableExpr RPARA

    LPARA           shift and go to state 6
    MINUS           shift and go to state 1
    DECIMALINTEGER  shift and go to state 55
    OCTALINTEGER    shift and go to state 36
    HEXAINTEGER     shift and go to state 29
    FLOAT           shift and go to state 61
    IMAGNUMBER      shift and go to state 13
    STRING          shift and go to state 57
    SUNYA           shift and go to state 44
    SACHO           shift and go to state 33
    JHUTO           shift and go to state 31
    LGPARA          shift and go to state 16
    IDENTIFIER      shift and go to state 40

    identifier                     shift and go to state 15
    string                         shift and go to state 8
    reference                      shift and go to state 64
    expr                           shift and go to state 67
    float                          shift and go to state 19
    boolean                        shift and go to state 34
    functioncall                   shift and go to state 62
    integer                        shift and go to state 11
    imaginary                      shift and go to state 27
    null                           shift and go to state 52
    array                          shift and go to state 35

state 7

    (13) slstmt -> return .

    NEWLINE         reduce using rule 13 (slstmt -> return .)
    $end            reduce using rule 13 (slstmt -> return .)
    KAKHA           reduce using rule 13 (slstmt -> return .)
    TICHO           reduce using rule 13 (slstmt -> return .)
    DIYE            reduce using rule 13 (slstmt -> return .)
    error           reduce using rule 13 (slstmt -> return .)
    ATHAWA          reduce using rule 13 (slstmt -> return .)
    BAJA            reduce using rule 13 (slstmt -> return .)
    MAKA            reduce using rule 13 (slstmt -> return .)
    BAISA           reduce using rule 13 (slstmt -> return .)


state 8

    (83) expr -> string .

    PLUS            reduce using rule 83 (expr -> string .)
    MINUS           reduce using rule 83 (expr -> string .)
    TIMES           reduce using rule 83 (expr -> string .)
    DIVIDE          reduce using rule 83 (expr -> string .)
    MODULUS         reduce using rule 83 (expr -> string .)
    POWER           reduce using rule 83 (expr -> string .)
    GT              reduce using rule 83 (expr -> string .)
    LT              reduce using rule 83 (expr -> string .)
    GE              reduce using rule 83 (expr -> string .)
    LE              reduce using rule 83 (expr -> string .)
    EQ              reduce using rule 83 (expr -> string .)
    NE              reduce using rule 83 (expr -> string .)
    RA              reduce using rule 83 (expr -> string .)
    WA              reduce using rule 83 (expr -> string .)
    CHHA            reduce using rule 83 (expr -> string .)
    CHHAINA         reduce using rule 83 (expr -> string .)
    PATHAU          reduce using rule 83 (expr -> string .)
    CHOTI           reduce using rule 83 (expr -> string .)
    NEWLINE         reduce using rule 83 (expr -> string .)
    $end            reduce using rule 83 (expr -> string .)
    LEKHA           reduce using rule 83 (expr -> string .)
    LEU             reduce using rule 83 (expr -> string .)
    COMMA           reduce using rule 83 (expr -> string .)
    RPARA           reduce using rule 83 (expr -> string .)
    RGPARA          reduce using rule 83 (expr -> string .)
    BHAE            reduce using rule 83 (expr -> string .)
    error           reduce using rule 83 (expr -> string .)
    KAKHA           reduce using rule 83 (expr -> string .)
    TICHO           reduce using rule 83 (expr -> string .)
    DIYE            reduce using rule 83 (expr -> string .)
    ATHAWA          reduce using rule 83 (expr -> string .)
    BAJA            reduce using rule 83 (expr -> string .)
    MAKA            reduce using rule 83 (expr -> string .)
    BAISA           reduce using rule 83 (expr -> string .)
    COLON           reduce using rule 83 (expr -> string .)
    DEKHI           reduce using rule 83 (expr -> string .)


state 9

    (43) mlstmt -> repeatloop .

    DIYE            reduce using rule 43 (mlstmt -> repeatloop .)
    error           reduce using rule 43 (mlstmt -> repeatloop .)
    NEWLINE         reduce using rule 43 (mlstmt -> repeatloop .)
    ATHAWA          reduce using rule 43 (mlstmt -> repeatloop .)
    $end            reduce using rule 43 (mlstmt -> repeatloop .)
    MAKA            reduce using rule 43 (mlstmt -> repeatloop .)
    BAJA            reduce using rule 43 (mlstmt -> repeatloop .)
    BAISA           reduce using rule 43 (mlstmt -> repeatloop .)
    TICHO           reduce using rule 43 (mlstmt -> repeatloop .)
    KAKHA           reduce using rule 43 (mlstmt -> repeatloop .)


state 10

    (15) slstmt -> break .

    NEWLINE         reduce using rule 15 (slstmt -> break .)
    $end            reduce using rule 15 (slstmt -> break .)
    KAKHA           reduce using rule 15 (slstmt -> break .)
    TICHO           reduce using rule 15 (slstmt -> break .)
    DIYE            reduce using rule 15 (slstmt -> break .)
    error           reduce using rule 15 (slstmt -> break .)
    ATHAWA          reduce using rule 15 (slstmt -> break .)
    BAJA            reduce using rule 15 (slstmt -> break .)
    MAKA            reduce using rule 15 (slstmt -> break .)
    BAISA           reduce using rule 15 (slstmt -> break .)


state 11

    (80) expr -> integer .

    PLUS            reduce using rule 80 (expr -> integer .)
    MINUS           reduce using rule 80 (expr -> integer .)
    TIMES           reduce using rule 80 (expr -> integer .)
    DIVIDE          reduce using rule 80 (expr -> integer .)
    MODULUS         reduce using rule 80 (expr -> integer .)
    POWER           reduce using rule 80 (expr -> integer .)
    GT              reduce using rule 80 (expr -> integer .)
    LT              reduce using rule 80 (expr -> integer .)
    GE              reduce using rule 80 (expr -> integer .)
    LE              reduce using rule 80 (expr -> integer .)
    EQ              reduce using rule 80 (expr -> integer .)
    NE              reduce using rule 80 (expr -> integer .)
    RA              reduce using rule 80 (expr -> integer .)
    WA              reduce using rule 80 (expr -> integer .)
    CHHA            reduce using rule 80 (expr -> integer .)
    CHHAINA         reduce using rule 80 (expr -> integer .)
    PATHAU          reduce using rule 80 (expr -> integer .)
    CHOTI           reduce using rule 80 (expr -> integer .)
    NEWLINE         reduce using rule 80 (expr -> integer .)
    $end            reduce using rule 80 (expr -> integer .)
    LEKHA           reduce using rule 80 (expr -> integer .)
    LEU             reduce using rule 80 (expr -> integer .)
    COMMA           reduce using rule 80 (expr -> integer .)
    RPARA           reduce using rule 80 (expr -> integer .)
    RGPARA          reduce using rule 80 (expr -> integer .)
    BHAE            reduce using rule 80 (expr -> integer .)
    error           reduce using rule 80 (expr -> integer .)
    KAKHA           reduce using rule 80 (expr -> integer .)
    TICHO           reduce using rule 80 (expr -> integer .)
    DIYE            reduce using rule 80 (expr -> integer .)
    ATHAWA          reduce using rule 80 (expr -> integer .)
    BAJA            reduce using rule 80 (expr -> integer .)
    MAKA            reduce using rule 80 (expr -> integer .)
    BAISA           reduce using rule 80 (expr -> integer .)
    COLON           reduce using rule 80 (expr -> integer .)
    DEKHI           reduce using rule 80 (expr -> integer .)


state 12

    (40) mlstmt -> mlif .

    DIYE            reduce using rule 40 (mlstmt -> mlif .)
    error           reduce using rule 40 (mlstmt -> mlif .)
    NEWLINE         reduce using rule 40 (mlstmt -> mlif .)
    ATHAWA          reduce using rule 40 (mlstmt -> mlif .)
    $end            reduce using rule 40 (mlstmt -> mlif .)
    MAKA            reduce using rule 40 (mlstmt -> mlif .)
    BAJA            reduce using rule 40 (mlstmt -> mlif .)
    BAISA           reduce using rule 40 (mlstmt -> mlif .)
    TICHO           reduce using rule 40 (mlstmt -> mlif .)
    KAKHA           reduce using rule 40 (mlstmt -> mlif .)


state 13

    (92) imaginary -> IMAGNUMBER .
